--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,17 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "prettier"],
+  "env": { "browser": true, "es6": true, "node": true },
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
+  "ignorePatterns": [".eslintrc.json", "next.config.js", "babelrc"],
+  "rules": {
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "no-console": "warn",
+    "react/prop-types": "off",
+    "no-restricted-imports": ["error", { "patterns": ["./", "../"] }],
+    "@typescript-eslint/explicit-module-boundary-types": "off"
+  }
 }
